# TamAGI

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  tamagi.service
.github/: FUNDING.yml
backend/: __init__.py  auth.py  config.py  main.py
backend/api/: __init__.py  auth.py  chat.py  dreams.py  mcp.py  monologue.py  onboarding.py  push.py  secrets.py  self_model.py  skills.py  sprites.py  world.py
backend/core/: __init__.py  agent.py  aura_client.py  consolidation.py  dreamer.py  embeddings.py  identity.py  llm.py  memory.py  memory_elasticsearch.py  monologue.py  motivation.py  orchestrator.py  personality.py  plan_executor.py  planning_engine.py  push.py  qa_pipeline.py  reflection.py  secrets.py  tool_loop.py  world_seed.py  world_state.py  world_thread.py
backend/core/self_model/: __init__.py  schemas.py  seed.py  store.py
backend/skills/: __init__.py  base.py  exec_skill.py  express_skill.py  mcp_adapter.py  orchestration_skill.py  query_self_model_skill.py  query_world_graph_skill.py  read_skill.py  read_world_graph_skill.py  recall_dreams_skill.py  recall_memory_skill.py  registry.py  task_skill.py  web_search_skill.py  world_graph_skill.py  write_skill.py  write_world_graph_skill.py
backend/skills/custom/: README.md
docs/: sprite-customization.md  world-monologue-design.md
frontend/: index.html  login.html  manifest.json  rig-editor.html  self-model.html  settings.html  sw.js
scripts/: migrate_to_elasticsearch.py
workspace/: README.md
workspace/skills/: README.md
