[project]
name = "tamagi"
version = "0.2.0"
description = "TamAGI — Your local-first AI companion"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.4",
]

[project.scripts]
tamagi = "backend.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
